<resources>
    <string name="capi55">CAPI STIS</string>
    <string name="accept_location">Simpan lokasi</string>
    <string name="accuracy">Ketepatan</string>
    <string name="activity_not_found">Tidak ditemukan aktifitas untuk menyelesaikan: %s</string>
    <string name="add_another">Tambah grup</string>
    <string name="add_another_repeat">Tambah grup \"%s\" lainnya?</string>
    <string name="add_repeat">Tambah grup \"%s\" baru?</string>
    <string name="add_repeat_no">Batal</string>
    <string name="altitude">Ketinggian</string>
    <string name="audio_file_error">Belum ada berkas audio yang dipilih.</string>
    <string name="audio_file_invalid">Berkas: %s bukan termasuk berkas audio.</string>
    <string name="barcode_scanner_error">Maaf, pemindai Barcode belum terpasang!</string>
    <string name="cancel">Batal</string>
    <string name="cancel_loading_form">Batal</string>
    <string name="cancel_location">Batal</string>
    <string name="cannot_edit_completed_form">Hasil wawancara tidak dapat diubah ketika telah diberikan tanda untuk siap kirim. Mungkin telah terenkripsi.</string>
    <string name="capture_audio">Simpan suara</string>
    <string name="capture_image">Ambil foto</string>
    <string name="capture_video">Simpan video</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="change_password">Kata sandi</string>
    <string name="change_host">Pilih Host PPL/PML</string>
    <string name="host">Alamat Host</string>
    <string name="change_protocol_settings_default">Pengaturan Platform</string>
    <string name="change_username">ODK Username</string>
    <string name="clearanswer_confirm">Hapus jawaban atas \"%s\"?</string>
    <string name="clear_answer">Hapus jawaban</string>
    <string name="clear_answer_ask">Hapus jawaban ini?</string>
    <string name="clear_answer_no">Batal</string>
    <string name="completed_data">Selesai (%s)</string>
    <string name="data">Kuesioner tersimpan</string>
    <string name="data_saved_error">Maaf, gagal simpan hasil wawancara!</string>
    <string name="data_saved_ok">Simpan hasil wawancara berhasil!</string>
    <string name="save_point_error">Gagal menyimpan titik recovery: %s</string>
    <string name="default_completed">Siap kirim secara bawaan</string>
    <string name="default_completed_summary">Tandai hasil wawancara telah siap kirim secara otomatis</string>
    <string name="delete_confirm_kuesioner">Hapus %s kuesioner?</string>
    <string name="delete_confirm_hasil">Hapus %s hasil wawancara?</string>
    <string name="delete_file">Hapus</string>
    <string name="delete_no">Jangan hapus</string>
    <string name="delete_repeat">Hapus grup</string>
    <string name="delete_repeat_ask">Hapus grup ini?</string>
    <string name="delete_repeat_confirm">Hapus grup \"%s\" dan semua sub-grup?</string>
    <string name="delete_repeat_no">Batal</string>
    <string name="delete_yes">Hapus</string>
    <string name="discard_answer">Hapus jawaban</string>
    <string name="discard_group">Hapus grup</string>
    <string name="download">Unduh</string>
    <string name="download_forms_result">Hasil unduh</string>
    <string name="downloading_data">Menghubungkan ke Server</string>
    <string name="do_not_change">Batal</string>
    <string name="do_not_exit">Batal</string>
    <string name="do_not_save">Abaikan perubahan</string>
    <string name="entering_repeat">Tambah grup</string>
    <string name="entering_repeat_ask">Tambah grup baru?</string>
    <string name="enter_data">Isi kuesioner</string>
    <string name="error_occured">Terjadi kesalahan</string>
    <string name="error_attaching_binary_file">Terjadi kesalahan saat memasukan berkas media: %s</string>
    <string name="fetching_file">Mengambil %1$s.\n\nKuesioner %2$s dari %3$s kuesioner(s).</string>
    <string name="file_deleted_error_kuesioner">Maaf, %1$s dari %2$s kuesioner terpilih, gagal dihapus!</string>
    <string name="file_deleted_error_hasil">Maaf, %1$s dari %2$s hasil wawancara terpilih, gagal dihapus!</string>
    <string name="file_deleted_ok_hasil">%s hasil wawancara telah berhasil dihapus!</string>
    <string name="file_deleted_ok_kuesioner">%s kuesioner telah berhasil dihapus!</string>
    <string name="file_delete_in_progress_hasil">Maaf, proses menghapus hasil wawancara sedang berjalan!</string>
    <string name="file_delete_in_progress_kuesioner">Maaf, proses menghapus kuesioner sedang berjalan!</string>
    <string name="file_invalid">Berkas: %s tidak valid.</string>
    <string name="file_missing">Berkas: %s tidak ditemukan.</string>
    <string name="finished_disk_scan">Seluruh kuesioner telah berhasil dimuat.</string>
    <string name="forms">Kuesioner kosong</string>
    <string name="getting_location">Sedang memuat lokasi</string>
    <string name="get_barcode">Ambil Barcode</string>
    <string name="get_forms">Unduh Kuesioner</string>
    <string name="get_location">Simpan lokasi</string>
    <string name="provider_disabled_error">Maaf, penyedia lokasi belum dinyalakan!</string>
    <string name="invalid_answer_error">Maaf, jawaban tersebut tidak valid!</string>
    <string name="jump_to_beginning">Awal</string>
    <string name="jump_to_end">Akhir</string>
    <string name="jump_to_previous">Atas</string>
    <string name="latitude">Garis lintang</string>
    <string name="leave_repeat_yes">Batal</string>
    <string name="leaving_repeat_ask">Tambahkan grup lagi?</string>
    <string name="list_failed_with_error">Pendataan kuesioner gagal. %s.</string>
    <string name="loading_form">Sedang memuat kuesioner</string>
    <string name="load_remote_form_error">Terjadi kesalahan saat mengambil daftar kuesioner</string>
    <string name="location_provider_accuracy">Dengan %1$s. Tingkat akurasi %2$s meter.</string>
    <string name="location_accuracy">Tingkat akurasi adalah %1$s meter</string>
    <string name="longitude">Garis bujur</string>
    <string name="manage_files">Hapus kuesioner</string>
    <string name="mark_finished">Tandai hasil wawancara ini telah siap kirim</string>
    <string name="noselect_error">Maaf, anda belum memilih kuesioner!</string>
    <string name="no_connection">Tidak ditemukan koneksi internet</string>
    <string name="no_items_display">Tidak ada yang dapat ditampilkan.</string>
    <string name="no_items_display_forms">Tidak ada yang dapat ditampilkan.\n\nCoba kembali mengambil dan mengisi kuesioner yang masih kosong.</string>
    <string name="no_items_display_instances">Tidak ada yang dapat ditampilkan.\n\nCoba selesaikan kuesioner yang tersimpan sebelum mengirim.</string>
    <string name="no_items_display_archive" translatable="false">Tidak ada yang dapat ditampilkan.\n\nMenu ini menampilkan kuesioner yang telah/gagal dikirim.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Maaf, kuesioner tidak dapat terbaca.</string>
    <string name="parse_legacy_formlist_failed">Tidak terdapat berkas kuesioner di server yang cocok dengan Aggregate 0.9.x. : %s </string>
    <string name="parse_openrosa_formlist_failed">Tidak terdapat berkas kuesioner di server yang cocok dengan OpenRosa version 1.0 standard: %s</string>
    <string name="password">Kata sandi</string>
    <string name="play_audio">Mainkan suara</string>
    <string name="play_video">Mainkan video</string>
    <string name="please_wait">Silakan tunggu.</string>
    <string name="please_wait_long">Silakan tunggu. Proses ini membutuhkan beberapa menit.</string>
    <string name="quit_application">Keluar dari %s</string>
    <string name="refresh">Memuat ulang</string>
    <string name="replace_barcode">Ubah Barcode</string>
    <string name="replace_location">Ubah lokasi</string>
    <string name="required_answer_error">Maaf, data ini dibutuhkan!</string>
    <string name="review_data">Ubah hasil wawancara</string>
    <string name="review_data_button">Ubah hasil wawancara</string>
    <string name="saved_data">Belum selesai (%s)</string>
    <string name="save_all_answers">Simpan Hasil Wawancara</string>
    <string name="saving_form">Sedang menyimpan hasil wawancara</string>
    <string name="sending_items">Sedang mengirim %1$s dari %2$s total hasil wawancara</string>
    <string name="send_data">Kirim hasil wawancara</string>
    <string name="send_data_button">Kirim hasil wawancara ke Server</string>
    <string name="send_selected_data">Kirim</string>
    <string name="server_auth_credentials">Masukan nama pengguna dan kata sandi untuk server:\n%s</string>
    <string name="server_requires_auth">Harap login untuk otentikasi</string>
    <string name="server_url">Tautan (URL)</string>
    <string name="server_preferences">Pengaturan Server</string>
    <string name="toggle_selected">Pilih semua</string>
    <string name="trigger">OK. Lanjut.</string>
    <string name="uploading_data">Mengirim hasil wawancara</string>
    <string name="url_error">Maaf, tautan (URL) tidak valid!</string>
    <string name="username">Nama pengguna</string>
    <string name="view_hierarchy">Risalah</string>
    <string name="general_preferences">Pengaturan Umum</string>
    <string name="click_to_web">Tap untuk berkunjung ke video tutorial penggunaan aplikasi CAPI</string>
    <string name="click_to_web2" translatable="false">Tap untuk berkunjung ke video tutorial fitur aplikasi CAPI</string>
    <string name="client">Klien</string>
    <string name="show_splash">Perlihatkan tampilan pembuka</string>
    <string name="show_splash_summary">Tampilkan pada awal aplikasi berjalan</string>
    <string name="splash_path">Gambar tampilan pembuka yang dipilih</string>
    <string name="default_splash_path">ODK Bawaan</string>
    <string name="select_another_image">Pilih gambar lainnya</string>
    <string name="use_odk_default">Gunakan gambar bawaan</string>
    <string name="change_splash_path">Ubah gambar</string>
    <string name="show_location">Tunjukkan lokasi</string>
    <string name="keep_changes">Simpan perubahan</string>
    <string name="change_formlist_url">Tautan kuesioner (appended to Server URL)</string>
    <string name="protocol">Platform</string>
    <string name="change_protocol">Platform</string>
    <string name="change_submission_url">Tautan pengumpulan (appended to Server URL)</string>
    <string name="font_size">Ukuran teks font</string>
    <string name="change_font_size">Ukuran teks font</string>
    <string name="form_scan_starting">Sedang memindai kuesioner…</string>
    <string name="selected_google_account_text">Akun Google</string>
    <string name="save_and_close">Simpan dan Tutup</string>
    <string name="reset_image">Set Ulang</string>
    <string name="change_server">Pilih server</string>
    <string name="autosend">Kirim Otomatis</string>
    <string name="autosend_wifi">Kirim otomatis dengan Wi-Fi</string>
    <string name="autosend_wifi_summary">Kirim otomatis saat tersambung Wi-Fi</string>
    <string name="autosend_network">Kirim otomatis dengan jaringan</string>
    <string name="autosend_network_summary">Kirim otomatis saat tersambung jaringan</string>
    <string name="navigation">Navigasi</string>
    <string name="constraint_behavior">Kendala pemrosesan</string>
    <string name="high_resolution_summary">Mengaktifkan perekaman video beresolusi tinggi.</string>
    <string name="high_resolution">Mengaktifkan video resolusi tinggi</string>
    <string name="protocol_settings">Pengaturan Server</string>
    <string name="aggregate_preferences">Pengaturan ODK Aggregate</string>
    <string name="delete_after_send">Hapus setelah mengirim</string>
    <string name="delete_after_send_summary">Menghapus media dan hasil wawancara yang sempurna setelah mengirim ke server  </string>
    <string name="change_server_url">Tautan server (URL)</string>
    <string name="pedoman_penggunaan">Pedoman Penggunaan CAPI</string>
    <string name="pedoman_penggunaan_value">https://youtu.be/_aSE4-SQdL8</string>
</resources>