<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:id="@+id/info"
        android:key="info"
        android:summary="@string/click_to_web"
        android:title="@string/pedoman_penggunaan">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/pedoman_penggunaan_value" />
    </PreferenceScreen>
    <PreferenceScreen
        android:id="@+id/versionNumber"
        android:key="App Version"
        android:summary="CAPI PKL 62 Riset 4 v1"
        android:title="App Version">
    </PreferenceScreen>
    <PreferenceCategory
        android:key="@string/client"
        android:title="@string/client">
        <ListPreference
            android:id="@+id/constraint_behavior"
            android:defaultValue="on_swipe"
            android:dialogTitle="@string/constraint_behavior"
            android:entries="@array/constraint_behavior_entries"
            android:entryValues="@array/constraint_behavior_entry_values"
            android:key="constraint_behavior"
            android:title="@string/constraint_behavior" />
        <ListPreference
            android:id="@+id/navigation"
            android:defaultValue="swipe"
            android:dialogTitle="@string/navigation"
            android:entries="@array/navigation_entries"
            android:entryValues="@array/navigation_entry_values"
            android:key="navigation"
            android:title="@string/navigation" />
        <ListPreference
            android:id="@+id/font_size"
            android:defaultValue="21"
            android:dialogTitle="@string/change_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_entry_values"
            android:key="font_size"
            android:title="@string/font_size" />
        <CheckBoxPreference
            android:id="@+id/default_completed"
            android:defaultValue="true"
            android:key="default_completed"
            android:summary="@string/default_completed_summary"
            android:title="@string/default_completed" />
        <CheckBoxPreference
            android:id="@+id/delete_after_send"
            android:key="delete_send"
            android:summary="@string/delete_after_send_summary"
            android:title="@string/delete_after_send"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:id="@+id/high_resolution"
            android:defaultValue="true"
            android:key="high_resolution"
            android:summary="@string/high_resolution_summary"
            android:title="@string/high_resolution" />
        <CheckBoxPreference
            android:id="@+id/show_splash"
            android:key="showSplash"
            android:summary="@string/show_splash_summary"
            android:title="@string/show_splash" />
        <PreferenceScreen
            android:id="@+id/splash_path"
            android:defaultValue="@string/default_splash_path"
            android:dependency="showSplash"
            android:key="splashPath"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/splash_path" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/server_preferences"
        android:title="@string/server_preferences">
        <ListPreference
            android:id="@+id/protocol"
            android:defaultValue="odk_default"
            android:dialogTitle="@string/change_protocol"
            android:entries="@array/protocol_entries"
            android:entryValues="@array/protocol_entry_values"
            android:key="protocol"
            android:visibility="gone"
            android:title="@string/protocol" />
        <PreferenceScreen
            android:key="protocol_settings"
            android:title="@string/protocol_settings" />
        <ListPreference
            android:id="@+id/selected_google_account"
            android:defaultValue=" "
            android:key="selected_google_account"
            android:title="@string/selected_google_account_text" />
        <EditTextPreference
            android:id="@+id/username"
            android:dialogTitle="@string/change_username"
            android:inputType="textNoSuggestions"
            android:key="username"
            android:title="@string/username" />
        <EditTextPreference
            android:id="@+id/password"
            android:dialogTitle="@string/change_password"
            android:inputType="textNoSuggestions"
            android:key="password"
            android:title="@string/password" />
        <ListPreference
            android:id="@+id/host"
            android:defaultValue="https://capi62.stis.ac.id/web-service-62/public"
            android:dialogTitle="@string/navigation"
            android:entries="@array/listHost"
            android:entryValues="@array/listHost_values"
            android:key="host"
            android:title="@string/change_host" />
        <!--<EditTextPreference
            android:id="@+id/host"
            android:dialogTitle="@string/change_host"
            android:inputType="textNoSuggestions"
            android:defaultValue="@string/default_PCL_server_url"
            android:key="host"
            android:title="@string/host" />-->
        <!--<LinearLayout-->
            <!--android:id="@+id/lin_pcl_host"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:clickable="true"-->
            <!--android:orientation="vertical"-->
            <!--android:padding="10dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:padding="20dp" />-->

            <!--<TextView-->
                <!--android:id="@+id/text_services_host"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="10dp"-->
                <!--android:text="Pilih Services Host"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                <!--android:textColor="@color/pkl56.light2" />-->

            <!--<RelativeLayout-->
                <!--android:id="@+id/check2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<RadioGroup-->
                    <!--android:id="@+id/services_host"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:textAppearance="?android:attr/textAppearanceMedium">-->

                    <!--<RadioButton-->
                        <!--android:id="@+id/services_host1"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="Host 1" />-->

                    <!--<RadioButton-->
                        <!--android:id="@+id/services_host2"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:text="Host 2" />-->
                <!--</RadioGroup>-->
            <!--</RelativeLayout>-->
        <!--</LinearLayout>-->
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/autosend"
        android:title="@string/autosend">
        <CheckBoxPreference
            android:id="@+id/autosend_wifi"
            android:defaultValue="false"
            android:key="autosend_wifi"
            android:summary="@string/autosend_wifi_summary"
            android:title="@string/autosend_wifi" />
        <CheckBoxPreference
            android:id="@+id/autosend_network"
            android:defaultValue="false"
            android:key="autosend_network"
            android:summary="@string/autosend_network_summary"
            android:title="@string/autosend_network" />
    </PreferenceCategory>

</PreferenceScreen>