<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/draw_relative_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/Collect">

    <LinearLayout
        android:id="@+id/drawViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <!--<Button-->
        <!--android:id="@+id/btnSelectColor"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@color/pkl.basic.1.1"/>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinishDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save_and_close"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/reset_image"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>